<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="app_home_title">My Nanodegree Apps!</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_app">SPOTIFY STREAMER</string>
    <string name="score_app">SCORE APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger_app">BUILD IT BIGGER</string>
    <string name="bacon_reader_app">BACON READER</string>
    <string name="capstone_app">CAPSTONE: MY OWN APP</string>
    <string name="spotify_app_toast">This button will launch Spotify Streamer App!</string>
    <string name="score_app_toast">This button will launch Score App!</string>
    <string name="library_app_toast">This button will launch Library App!</string>
    <string name="bacon_app_toast">This button will launch Bacon App!</string>
    <string name="build_it_bigger_app_toast">This button will launch Build It Bigger App!</string>
    <string name="capstone_app_toast">This button will launch Capstone App!</string>


    <color name="home_screen_color">#E0F2F1</color>
    <color name="button_orange_bg">#F08C35</color>
</resources>
