<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/home_screen_color">

        <TextView
            android:id="@+id/app_home_title_text"
            android:text="@string/app_home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textSize="30dp"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/spoftify_streamer"
            android:text="@string/spotify_app"
            android:layout_below="@id/app_home_title_text"
            style="@style/HomeButtonStyle"
            android:onClick="onUserClickButton"
            android:layout_marginTop="50dp"/>

        <Button
            android:id="@+id/score_app"
            android:text="@string/score_app"
            android:layout_below="@id/spoftify_streamer"
            style="@style/HomeButtonStyle"
            android:onClick="onUserClickButton"/>

        <Button
            android:id="@+id/library_app"
            android:text="@string/library_app"
            android:layout_below="@id/score_app"
            style="@style/HomeButtonStyle"
            android:onClick="onUserClickButton"/>

        <Button
            android:id="@+id/build_it_bigger"
            android:text="@string/build_it_bigger_app"
            android:layout_below="@id/library_app"
            style="@style/HomeButtonStyle"
            android:onClick="onUserClickButton"/>

        <Button
            android:id="@+id/bacon_reader"
            android:text="@string/bacon_reader_app"
            android:layout_below="@id/build_it_bigger"
            style="@style/HomeButtonStyle"
            android:onClick="onUserClickButton"/>

        <Button
            android:id="@+id/capstone"
            android:text="@string/capstone_app"
            android:layout_below="@id/bacon_reader"
            style="@style/HomeButtonStyle"
            android:layout_marginBottom="20dp"
            android:onClick="onUserClickButton"/>

    </RelativeLayout>
</ScrollView>